--- a/index.html
+++ b/index.html
@@ -4,23 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
   <title>NewsGrid | Latest News</title>
 </head>
 <body>
   <nav id="main-nav">
-    <div class="container">
+    <div class="container flex">
       <div class="logo">
         <a href="#"><img src="img/logo.png" alt="NewsGrid logo"></a>
       </div>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a class="current" href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </div>
   </nav>
+  <header id="showcase">
+    <div class="container">
+      <div class="showcase-content flex">
+        <p class="category">SPORTS</p>
+        <h1>SOME SPORTS ARTICLE</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus rerum officia quibusdam mollitia deserunt animi soluta laudantium. Quam sapiente a dolorum magnam necessitatibus quis tempore facere totam. Dolor, sequi distinctio!</p>
+        <a class="btn" href="article.html">Read More</a>
+      </div>
+    </div>
+  </header>
 
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/bdbc2939a5.js" crossorigin="anonymous"></script>  
