--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>NewsGrid | Latest News</title>
 </head>
 <body>
+  <!-- Main Nav -->
   <nav id="main-nav">
     <div class="container flex">
       <div class="logo">
@@ -23,18 +24,118 @@
       </ul>
     </div>
   </nav>
+  <!-- Showcase -->
   <header id="showcase">
     <div class="container">
       <div class="showcase-content flex">
-        <p class="category">SPORTS</p>
+        <div class="category category-sports">SPORTS</div>
         <h1>SOME SPORTS ARTICLE</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus rerum officia quibusdam mollitia deserunt animi soluta laudantium. Quam sapiente a dolorum magnam necessitatibus quis tempore facere totam. Dolor, sequi distinctio!</p>
         <a class="btn" href="article.html">Read More</a>
       </div>
     </div>
   </header>
+  <!-- Articles -->
+  <section id="articles">
+    <div class="container">
+      <h2>Editors' Picks</h2>
+      <div class="articles-container">
+        <article class="card bg-light">
+          <img src="img/articles/ent1.jpg" alt="Man using VR">
+          <div class="article-content">
+            <div class="category category-ent">ENTERTAINMENT</div>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
+          </div>
+        </article>
+        <article class="card bg-dark">
+          <div class="article-content">
+            <div class="category category-sports">SPORTS</div>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
+          </div>
+        </article>
+        <article class="card bg-light">
+          <img src="img/articles/tech1.jpg" alt="Server">
+          <div class="article-content">
+            <div class="category category-tech">TECHNOLOGY</div>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
+          </div>
+        </article>
+        <article class="card bg-light">
+          <img src="img/articles/sports1.jpg" alt="Cycling competition">
+          <div class="article-content">
+            <div class="category category-sports">SPORTS</div>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
+          </div>
+        </article>
+        <article class="card bg-light">
+          <img src="img/articles/tech2.jpg" alt="Laptop">
+          <div class="article-content">
+            <div class="category category-tech">TECHNOLOGY</div>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
+          </div>
+        </article>
+        <article class="card bg-primary">
+          <div class="article-content">
+            <div class="category category-sports">SPORTS</div>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
+          </div>
+        </article>
+        <article class="card bg-light">
+          <img src="img/articles/ent2.jpg" alt="Man using VR">
+          <div class="article-content">
+            <div class="category category-ent">Entertainment</div>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+  <footer class="bg-dark">
+    <div class="container">
+      <div class="sub-footer flex">
+        <div class="footer-col">
+          <div class="logo">
+            <img src="img/logo_light.png" alt="NewsGrid logo">
+          </div>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit deserunt assumenda enim non? Ratione ipsum voluptates fuga eos earum vitae.</p>
+        </div>
+        <div class="footer-col">
+          <h3>Email Newsletter</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <form action="process.php">
+            <input type="email" id="email" name="email" placeholder="Enter email...">
+            <input type="submit" value="Subscribe" class="form-btn">
+          </form>
+        </div>
+        <div class="footer-col">
+          <h3>Site Links</h3>
+          <ul>
+            <li><a href="#">Help & Support</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h3>Join Our Club</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nesciunt!</p>
+          <a href="#" class="btn">Join Now</a>
+        </div>
+      </div>
+    </div>
+    <div class="main-footer">
+      <p>Copyright &copy; 2020, All Rights Reserved.</p>
+    </div>
+  </footer>
 
-<!-- font awesome -->
-<script src="https://kit.fontawesome.com/bdbc2939a5.js" crossorigin="anonymous"></script>  
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/bdbc2939a5.js" crossorigin="anonymous"></script>  
 </body>
 </html>
