added media query

--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
             <img src="img/logo_light.png" alt="NewsGrid logo">
           </div>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit deserunt assumenda enim non? Ratione ipsum voluptates fuga eos earum vitae.</p>
+          <div class="social-icons">
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+            <a href="https://twitter.com/explore" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
+          </div>
         </div>
         <div class="footer-col">
           <h3>Email Newsletter</h3>
