--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
     <div class="container">
       <h2>Editors' Picks</h2>
       <div class="articles-container">
+        <article class="card bg-primary">
+          <img src="img/articles/sports2.jpg" alt="My favorite pointguard">
+          <div class="article-content">
+            <div class="category category-sports">SPORTS</div>
+            <h3>My Favorite Point Guard</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
+          </div>
+        </article>
         <article class="card bg-light">
           <img src="img/articles/ent1.jpg" alt="Man using VR">
           <div class="article-content">
             <div class="category category-ent">ENTERTAINMENT</div>
-            <h3>Lorem ipsum dolor sit amet</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
-          </div>
-        </article>
-        <article class="card bg-dark">
-          <div class="article-content">
-            <div class="category category-sports">SPORTS</div>
             <h3>Lorem ipsum dolor sit amet</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
           </div>
@@ -64,14 +65,6 @@
           </div>
         </article>
         <article class="card bg-light">
-          <img src="img/articles/sports1.jpg" alt="Cycling competition">
-          <div class="article-content">
-            <div class="category category-sports">SPORTS</div>
-            <h3>Lorem ipsum dolor sit amet</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
-          </div>
-        </article>
-        <article class="card bg-light">
           <img src="img/articles/tech2.jpg" alt="Laptop">
           <div class="article-content">
             <div class="category category-tech">TECHNOLOGY</div>
@@ -79,7 +72,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
           </div>
         </article>
-        <article class="card bg-primary">
+        <article class="card bg-light">
+          <img src="img/articles/sports1.jpg" alt="Cycling competition">
           <div class="article-content">
             <div class="category category-sports">SPORTS</div>
             <h3>Lorem ipsum dolor sit amet</h3>
@@ -99,7 +93,7 @@
   </section>
   <footer class="bg-dark">
     <div class="container">
-      <div class="sub-footer flex">
+      <div class="sub-footer">
         <div class="footer-col">
           <div class="logo">
             <img src="img/logo_light.png" alt="NewsGrid logo">
