--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav id="main-nav">
     <div class="container flex">
       <div class="logo">
-        <a href="#"><img src="img/logo.png" alt="NewsGrid logo"></a>
+        <a href="index.html"><img src="img/logo.png" alt="NewsGrid logo"></a>
       </div>
       <ul>
         <li><a class="current" href="index.html">Home</a></li>
@@ -41,10 +41,10 @@
       <h2>Editors' Picks</h2>
       <div class="articles-container">
         <article class="card bg-primary">
-          <img src="img/articles/sports2.jpg" alt="My favorite pointguard">
+          <a href="article.html"><img src="img/articles/sports2.jpg" alt="My favorite pointguard"></a>
           <div class="article-content">
             <div class="category category-sports">SPORTS</div>
-            <h3>My Favorite Point Guard</h3>
+            <h3><a href="article.html">Favorite Point Guard</a></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
           </div>
         </article>
